Рандом в исследованиях нейромодов

--- a/nano/templates/psychoscope.tmpl
+++ b/nano/templates/psychoscope.tmpl
@@ -72,7 +72,7 @@
 		<br>
 		<b>Description:</b> {{:data.lifeform.desc}}
 		<br>
-		<b>Scans: </b> {{:data.lifeform.scan_count}} / {{:data.lifeform.max_scans}}
+		<b>Scans: </b> {{:data.lifeform.scan_count}}
 		<br>
 		<!-- TECHNOLOGIES LIST -->
 		<h3>New Technologies:</h3>
