--- a/nano/templates/psychoscope.tmpl
+++ b/nano/templates/psychoscope.tmpl
@@ -15,97 +15,121 @@
 		{{:helper.link('Species List', 'dna', { 'option': 'showLifeformsList' })}}
 	</div>
 {{else data.mode == 1}}
-	<h2>Psychoscope Scans Journal</h2>
+	<div class="item">
+		<h2>Psychoscope Scans Journal</h2>
+	</div>
         <!-- List of scans -->
 	{{for data.scans_journal}}
-		<h3>Scan of "{{:value.scan.object_name}}"</h3>
-		<b>Date: </b> {{:value.scan.date}}
-		<br>
-		<b>Kingdom:</b> {{:value.scan.lifeform.kingdom}}
-		<br>
-		<b>Class:</b> {{:value.scan.lifeform.class}}
-		<br>
-		<b>Genus:</b> {{:value.scan.lifeform.genus}}
-		<br>
-		<b>Species:</b> {{:value.scan.lifeform.species}}
-		<br>
 		<div class="itemContent">
-			{{:helper.link('Show Details', 'search', {'option': 'showLifeform', 'lifeform_reference': value.lifeform_reference})}}
+			<h3>Scan of "{{:value.scan.object_name}}"</h3>
+			<b>Date: </b> {{:value.scan.date}}
+			<br>
+			<b>Kingdom:</b> {{:value.scan.lifeform.kingdom}}
+			<br>
+			<b>Class:</b> {{:value.scan.lifeform.class}}
+			<br>
+			<b>Genus:</b> {{:value.scan.lifeform.genus}}
+			<br>
+			<b>Species:</b> {{:value.scan.lifeform.species}}
+			<br>
+			<div class="itemContent">
+				{{:helper.link('Show Details', 'search', {'option': 'showLifeform', 'lifeform_reference': value.lifeform_reference})}}
+			</div>
+			<div class="itemContent">
+				{{:helper.link('Delete Scan', 'trash', {'option': 'deleteScan', 'scan_reference': value.scan_reference}, null, 'redButton')}}
+			</div>
 		</div>
-		<div class="itemContent">
-			{{:helper.link('Delete Scan', 'trash', {'option': 'deleteScan', 'scan_reference': value.scan_reference}, null, 'redButton')}}
+	{{empty}}
+		<div class="notice">
+			<b>No scans detected.</b>
 		</div>
-		<br>
-    {{empty}}
-        <b>No scans detected.</b>
     {{/for}}
 	<!-- Return to Main Menu -->
-	<br>
-	{{:helper.link('Close', 'arrow-left', { 'option': 'showMainMenu' })}}
+	<div class="item">
+		{{:helper.link('Close', 'arrow-left', { 'option': 'showMainMenu' })}}
+	</div>
 
 <!-- Species List -->
 {{else data.mode == 2}}
-	<h2>Species List</h2>
-	<br>
+	<div class="item">
+		<h2>Species List</h2>
+	</div>
+
 	{{for data.lifeforms_list}}
 		<div class="itemContent">
 			{{:helper.link(value.lifeform.genus, 'search', {'option': 'showLifeform', 'lifeform_reference': value.lifeform_reference})}}
 		</div>
 	{{empty}}
-		<b>No known lifeforms.</b>
+		<div class="notice">
+			<b>No known lifeforms.</b>
+		</div>
 	{{/for}}
-	<br>
-	<br>
-	{{:helper.link('Close', 'arrow-left', { 'option': 'showMainMenu' })}}
+	<div class="item">
+		{{:helper.link('Close', 'arrow-left', { 'option': 'showMainMenu' })}}
+	</div>
 <!-- Lifeform Details -->
 {{else data.mode == 3}}
 	{{if data.lifeform}}
-		<h2>Details of "{{:data.lifeform.species}}"</h2>
+		<div class="item">
+			<div class="itemLabel">
+				<h2>{{:data.lifeform.species}}</h2>
+			</div>
 
-		<b>Kingdom:</b> {{:data.lifeform.kingdom}}
-		<br>
-		<b>Class:</b> {{:data.lifeform.class}}
-		<br>
-		<b>Genus:</b> {{:data.lifeform.genus}}
-		<br>
-		<b>Species:</b> {{:data.lifeform.species}}
-		<br>
-		<b>Description:</b> {{:data.lifeform.desc}}
-		<br>
-		<b>Scans: </b> {{:data.lifeform.scan_count}}
-		<br>
+			<div class="itemContent">
+				<b>Kingdom:</b> {{:data.lifeform.kingdom}}<br>
+				<b>Class:</b> {{:data.lifeform.class}}<br>
+				<b>Genus:</b> {{:data.lifeform.genus}}<br>
+				<b>Species:</b> {{:data.lifeform.species}}<br>
+				<b>Description:</b> {{:data.lifeform.desc}}<br>
+				<b>Scans: </b> {{:data.lifeform.scan_count}}<br>
+			</div>
+		</div>
+
 		<!-- TECHNOLOGIES LIST -->
-		<h3>New Technologies:</h3>
+		<div class="item">
+			<h3>New Technologies:</h3>
+		</div>
+
 		{{for data.lifeform.opened_techs}}
-			<b>{{:value.tech_name}}</b> - {{:value.tech_level}}
-			<br>
+			<div class="itemContent">
+				<b>{{:value.tech_name}}</b> - {{:value.tech_level}}
+			</div>
 		{{empty}}
-			<b>No new technologies.</b>
+			<div class="notice">
+				<b>No new technologies.</b>
+			</div>
 		{{/for}}
-		<br>
+
 		{{if data.lifeform.opened_techs}}
 			<div class="itemContent">
 				{{:helper.link('Print Technology Data', 'print', { 'option': 'printTechs', 'lifeform_reference': data.lifeform_reference })}}
 			</div>
-			<br>
 		{{/if}}
 		<!-- NEUROMODS LIST -->
-		<h3>New Neuromods:</h3>
+		<div class="item">
+			<h3>New Neuromods:</h3>
+		</div>
+
 		{{for data.lifeform.opened_neuromods}}
-			<b>{{:value.neuromod_name}}</b> - {{:value.neuromod_desc}}
-			<br>
-			{{:helper.link('Print Neuromod Disk Data', 'print', { 'option': 'printNeuromodData', 'neuromod_type': value.neuromod_type })}}
-			<br>
+			<div class="item">
+				<b>{{:value.neuromod_name}}</b> - {{:value.neuromod_desc}}
+			</div>
+			<div class="itemContent">
+				{{:helper.link('Print Neuromod Disk Data', 'print', { 'option': 'printNeuromodData', 'neuromod_type': value.neuromod_type })}}
+			</div>
 		{{empty}}
-			<b>No new neuromods.</b>
+			<div class="notice">
+				<b>No new neuromods.</b>
+			</div>
 		{{/for}}
-		<br>
+
 	{{else}}
-		<b>Error! Lifeform not found!</b>
-		<br>
+		<div class="notice">
+			<b>Error! Lifeform not found!</b>
+		</div>
 	{{/if}}
 
-	<div class="itemContent">
+	<div class="item">
 		{{:helper.link('Close', 'arrow-left', { 'option': 'back' })}}
 	</div>
 {{/if}}
