--- a/nano/templates/neuromodrnd_console.tmpl
+++ b/nano/templates/neuromodrnd_console.tmpl
@@ -4,33 +4,45 @@
         <h2>Main Menu</h2>
     </div>
 
-    <div class="itemContent">
-        {{:helper.link('Neuromod Researching', 'search', { 'option': 'showNeuromodResearching' })}}
+	<div class="item">
+		<div class="itemContent">
+			{{:helper.link('Neuromod Researching', 'search', { 'option': 'showNeuromodResearching' })}}
+		</div>
+		<div class="itemContent">
+			{{:helper.link('Neuromod Production', 'search', { 'option': 'showNeuromodProduction' })}}
+		</div>
+		<div class="itemContent">
+			{{:helper.link('Data Management', 'search', { 'option': 'showDataManagement' })}}
+		</div>
 	</div>
-	<div class="itemContent">
-        {{:helper.link('Neuromod Production', 'search', { 'option': 'showNeuromodProduction' })}}
-    </div>
-    <div class="itemContent">
-        {{:helper.link('Neuromods List', 'search', { 'option': 'showNeuromodsList' })}}
-    </div>
 
     <br><br>
 
-    <div class="itemContent">
-        {{if data.inserted_neuromod}}
-            {{:helper.link('Eject Neuromod', 'save', { 'option': 'ejectNeuromod' })}}
-        {{else}}
-            {{:helper.link('Insert Neuromod', 'save', { 'option': 'insertNeuromod' })}}
-        {{/if}}
-    </div>
+	<div class="item">
+		<div class="itemContent">
+			{{if data.neuromod_shell}}
+				{{:helper.link('Eject Neuromod', 'save', { 'option': 'ejectNeuromodShell' })}}
+			{{else}}
+				{{:helper.link('Insert Neuromod', 'save', { 'option': 'insertNeuromodShell' })}}
+			{{/if}}
+		</div>
 
-    <div class="itemContent">
-        {{if data.inserted_neuromod_data}}
-            {{:helper.link('Eject Neuromod Data', 'save', { 'option': 'ejectNeuromodData' })}}
-        {{else}}
-            {{:helper.link('Insert Neuromod Data', 'save', { 'option': 'insertNeuromodData' })}}
-        {{/if}}
-    </div>
+		<div class="itemContent">
+			{{if data.disk}}
+				{{:helper.link('Eject Disk', 'save', { 'option': 'ejectDisk' })}}
+			{{else}}
+				{{:helper.link('Insert Disk', 'save', { 'option': 'insertDisk' })}}
+			{{/if}}
+		</div>
+
+		<div class="itemContent">
+			{{if data.beaker}}
+				{{:helper.link('Eject Beaker', 'save', { 'option': 'ejectBeaker' })}}
+			{{else}}
+				{{:helper.link('Insert Beaker', 'save', { 'option': 'insertBeaker' })}}
+			{{/if}}
+		</div>
+	</div>
 
 <!-- Neuromod Researching -->
 {{else data.mode == 1}}
@@ -38,57 +50,255 @@
         <h2>Neuromod Researching</h2>
     </div>
 
-    {{if data.inserted_neuromod_data}}
-        <h3>Neuromod Data</h3><br>
-        <b>Name:</b> {{:data.inserted_neuromod_data.name}}<br>
-        <b>Description:</b> {{:data.inserted_neuromod_data.desc}}<br>
+    {{if data.selected_neuromod}}
+        <div class="item">
+            <h3>Neuromod Data</h3><br>
+            <b>Name:</b> {{:data.selected_neuromod.name}}<br>
+            <b>Description:</b> {{:data.selected_neuromod.desc}}<br>
 
-        {{if data.is_researched}}
-            <h3>The neuromod is already researched.</h3>
-        {{else}}
-            {{if data.is_researching}}
-                <div class="itemContent">
-                    {{:helper.displayBar(data.research_progress, 0, data.inserted_neuromod_data.neuromod_data.research_time, 'good')}}
-                </div>
-
-                <div class="itemContent">
-                    {{:helper.link('Stop Researching', 'search', { 'option': 'stopResearching' })}}
-                </div>
+            {{if data.selected_neuromod.researched}}
+                <h3>The neuromod is already researched.</h3>
             {{else}}
-                <div class="itemContent">
-                    {{:helper.link('Start Researching', 'search', { 'option': 'startResearching' })}}
-                </div>
+                {{if data.is_researching}}
+                    <div class="itemContent">
+                        {{:helper.displayBar(data.research_progress, 0, data.selected_neuromod.research_time, 'good')}}
+                    </div>
+
+                    <div class="itemContent">
+                        {{:helper.link('Stop Researching', 'search', { 'option': 'stopResearching' })}}
+					</div>
+                {{else}}
+                    <div class="itemContent">
+                        {{:helper.link('Start Researching', 'search', { 'option': 'startResearching' })}}
+                    </div>
+                {{/if}}
             {{/if}}
-        {{/if}}
+        </div>
     {{else}}
-        <h3>Insert neuromod data!</h3>
+        <div class="notice">
+            <b>Select a neuromod.</b>
+        </div>
     {{/if}}
 
-    <div class="itemContent">
+    <div class="item">
         {{:helper.link('Close', 'arrow-left', { 'option': 'back' })}}
     </div>
 
 <!-- Neuromods Production -->
 {{else data.mode == 2}}
+<div class="item">
+    <h2>Neuromod Production</h2>
 
-<!-- Researched Neuromods List -->
+	{{if !data.produciton_status}}
+		<div class="item">
+			<h3>Insert Neuromod Shell:</h3>
+
+			{{if data.neuromod_shell}}
+				<div class="itemContent">
+					{{if data.neuromod_shell.neuromod}}
+						<b>Neuromod:</b> <span>{{:data.neuromod_shell.neuromod.name}}</span>
+					{{else}}
+						<b>Neuromod:</b> <span class="good">Free</span> <br>
+					{{/if}}
+				</div>
+
+				<div class="itemContent">
+					{{if data.neuromod_shell.neuromod}}
+						{{:helper.link('Clear Neuromod Shell', 'icon', { 'option': 'clearNeuromodShell' }, 'linkDanger')}}
+					{{else}}
+						{{:helper.link('Clear Neuromod Shell', 'icon', 'linkOff')}}
+					{{/if}}
+				</div>
+			{{else}}
+				<div class="notice">
+					No inserted neuromod shell.
+				</div>
+			{{/if}}
+		</div>
+
+		<div class="item">
+			<h3>Check Beaker Reagents:</h3>
+
+			{{if data.beaker}}
+				<div class="itemContent">
+					<b>Beaker:</b> {{:data.beaker.volume}}/{{:data.beaker.volume_max}} <br>
+
+					{{if data.beaker.volume == 0}}
+						<b>Reagents:</b> Empty <br>
+					{{else}}
+						{{if data.beaker.check_status}}
+							<b>Reagents:</b> <span class="good">Ok</span> <br>
+						{{else}}
+							<b>Reagents:</b> <span class="bad">Bad</span> <br>
+						{{/if}}
+					{{/if}}
+				</div>
+
+				{{if data.beaker.volume < 25}}
+					<div class="notice">
+						Too small volume of reagents in the beaker.
+					</div>
+				{{/if}}
+
+				<div class="itemContent">
+					{{:helper.link('Flush Beaker', 'icon', { 'option': 'flushBeaker' })}}
+				</div>
+			{{else}}
+				<div class="notice">
+					No inserted beaker.
+				</div>
+			{{/if}}
+		</div>
+
+		<div class="item">
+			<h3>Select Researched Neuromod:</h3>
+			{{if data.selected_neuromod && data.selected_neuromod.researched}}
+				<div class=itemContent>
+					<h3>{{:data.selected_neuromod.name}}</h3>
+					<b>Description:</b> {{:data.selected_neuromod.desc}}
+				</div>
+			{{else}}
+				<div class="notice">
+					<b>Select a researched neuromod.</b>
+				</div>
+			{{/if}}
+		</div>
+
+		<div class="item">
+			<h3>Select Target Lifeform:</h3>
+
+			{{for data.lifeforms}}
+				<div class="itemContent"></div>
+					{{if value.neuromod_prod_scans > 0 && value.scan_count > value.neuromod_prod_scans}}
+						{{:helper.link(value.species, 'icon', { 'option': 'selectLifeform', 'lifeform_type': value.type })}}
+					{{else}}
+						{{if data.selected_lifeform && value.type == data.selected_lifeform.type}}
+							{{:helper.link(value.species, 'icon', null, 'linkOff')}}
+						{{else}}
+							{{:helper.link(value.species, 'icon', null, 'linkOff')}}
+						{{/if}}
+					{{/if}}
+				</div>
+			{{empty}}
+				<div class="notice">
+					No known lifeforms.
+				</div>
+			{{/for}}
+		</div>
+
+		<div class="item">
+			<h3>Start Produciton</h3>
+
+			{{if data.production_ready}}
+				{{:helper.link('Start', 'icon', { 'option': 'startProduction' })}}
+			{{else}}
+				<div class="notice">
+					Production not ready.
+				</div>
+			{{/if}}
+		</div>
+	{{else}}
+		<div class="item">
+			{{:helper.link('Stop', 'arrow-left', { 'option': 'stopProduction' }, 'linkDanger')}}
+		</div>
+	{{/if}}
+
+	<div class="item">
+		{{:helper.link('Close', 'arrow-left', { 'option': 'back' })}}
+	</div>
+</div>
+
+<!-- Data Management -->
 {{else data.mode == 3}}
-    <div class="itemContent">
-        <h2>Researched Neuromods</h2>
-    </div>
+	<h2>Data Management</h2>
 
-    {{for data.researched_neuromods}}
-    <div class="itemContent">
-        <b>Name:</b> {{:value.neuromod_name}}<br>
-        <b>Description:</b> {{:value.neuromod_desc}}<br>
-    </div>
-    {{empty}}
-        <div class="itemContent">
-            <h3>No researched neuromods!</h3>
-        </div>
-    {{/for}}
+    <div class="item">
+        <h3>Neuromods List</h3> {{:helper.link('Toggle List', 'icon', { 'option': 'toggleNeuromodsList' })}}
 
-    <div class="itemContent">
-        {{:helper.link("Close", 'arrow-left', { 'option': 'back' })}}
+		{{if data.show_options & 1}}
+			{{for data.neuromods}}
+				<div class="item">
+					<div class="itemContent">
+						<b>Name:</b> {{:value.name}}<br>
+						<b>Description:</b> {{:value.desc}}<br>
+
+						{{if value.researched}}
+							<b class="good">Researched.</b>
+						{{else}}
+							<b class="bad">Not researched.</b>
+						{{/if}}
+
+						<br>
+
+						{{if data.selected_neuromod && data.selected_neuromod.type == value.type}}
+							{{:helper.link('Select Neuromod', 'arrow-left', null, 'linkOff')}}
+						{{else}}
+							{{:helper.link('Select Neuromod', 'arrow-left', { 'option': 'selectNeuromod', 'neuromod_type': value.type})}}
+						{{/if}}
+					</div>
+				</div>
+			{{empty}}
+				<div class="notice">
+					<b>No neuromods.</b>
+				</div>
+			{{/for}}
+		{{/if}}
+	</div>
+
+	<div class="item">
+		<h3>Lifeforms List</h3> {{:helper.link('Toggle List', 'icon', { 'option': 'toggleLifeformsList' })}}
+
+		{{if data.show_options & 2}}
+			{{for data.lifeforms}}
+				<center><div class="item">
+					<div class="itemContent">
+						<h2>{{: value.species}}</h2>
+						{{:value.img}}
+					</div>
+
+					<div class="itemContent">
+						<b>Kingdom:</b> {{: value.kingdom}}<br>
+						<b>Class:</b> {{: value.class}}<br>
+						<b>Genus:</b> {{: value.genus}}<br>
+						<b>Species:</b> {{: value.species}}<br>
+						<b>Description:</b> {{: value.desc}}<br>
+						<b>Scans: </b> {{: value.scan_count}}<br>
+						<b>Prod: </b> {{: value.neuromod_prod_scans}}<br>
+
+						{{if value.neuromod_prod_scans > 0 && value.scan_count > value.neuromod_prod_scans}}
+							<b>Can use neuromods:</b> <span class="good">Yes</span>
+						{{else}}
+							<b>Can use neuromods:</b> <span class="bad">No</span>
+						{{/if}}
+					</div>
+				</div></center>
+			{{empty}}
+				<div class="notice">
+					<b>No lifeforms.</b>
+				</div>
+			{{/for}}
+		{{/if}}
+	</div>
+
+	<div class="item">
+		<div class="itemContent">
+			{{if data.disk == 'neuromod'}}
+				{{:helper.link('Load Neuromod From Disk', 'save', { 'option': 'loadNeuromodFromDisk' })}}
+			{{else}}
+				{{:helper.link('Load Neuromod From Disk', 'save', null, 'linkOff')}}
+			{{/if}}
+		</div>
+
+		<div class="itemContent">
+			{{if data.disk == 'lifeform'}}
+				{{:helper.link('Load Lifeform From Disk', 'save', { 'option': 'loadLifeformFromDisk' })}}
+			{{else}}
+				{{:helper.link('Load Lifeform From Disk', 'save', null, 'linkOff')}}
+			{{/if}}
+		</div>
+	</div>
+
+    <div class="item">
+        {{:helper.link('Close', 'arrow-left', { 'option': 'back' })}}
     </div>
 {{/if}}
