--- a/tgui-next/packages/tgui/components/Button.scss
+++ b/tgui-next/packages/tgui/components/Button.scss
@@ -1,13 +1,14 @@
 @mixin button-color($color) {
-  // Adapt text color to background luminance to ensure high contast
-  $luminance: luminance($color);
-  $text-color: if($luminance > 0.3,
-    rgba(0, 0, 0, 1),
-    rgba(255, 255, 255, 1));
-
   transition: color, background-color 50ms;
   background-color: $color;
-  color: $text-color;
+
+  // Adapt button color to background luminance to ensure high contast
+  @if luminance($color) > 0.4 {
+    color: rgba(0, 0, 0, 1);
+  }
+  @else {
+    color: rgba(255, 255, 255, 1);
+  }
 
   &:hover {
     transition: color, background-color 0ms;
@@ -20,7 +21,12 @@
   &:hover,
   &:focus {
     background-color: lighten($color, $button-lighten-hover);
-    color: $text-color;
+    @if luminance($color) > 0.4 {
+      color: rgba(0, 0, 0, 1);
+    }
+    @else {
+      color: rgba(255, 255, 255, 1);
+    }
   }
 }
 
