--- a/tgui-next/packages/tgui/components/Input.scss
+++ b/tgui-next/packages/tgui/components/Input.scss
@@ -1,45 +1,30 @@
-.NumberInput {
+.Input {
   position: relative;
   display: inline-block;
+  width: 120px;
   border: 1px solid $input-base-color;
   border: 1px solid rgba($input-base-color, 0.75);
   border-radius: 2px;
-  color: $input-base-color;
+  color: #fff;
   background-color: #000;
   background-color: rgba(0, 0, 0, 0.75);
   padding: 0 4px;
   margin-right: 2px;
   line-height: 17px;
-  text-align: right;
   overflow: visible;
 }
 
-.NumberInput--fluid {
+.Input--fluid {
   display: block;
+  width: auto;
 }
 
-.NumberInput__content {
-  margin-left: 6px;
+.Input__baseline {
+  display: inline-block;
+  color: transparent;
 }
 
-.NumberInput__barContainer {
-  position: absolute;
-  top: 2px;
-  bottom: 2px;
-  left: 2px;
-}
-
-.NumberInput__bar {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 3px;
-  box-sizing: border-box;
-  border-bottom: 1px solid $input-base-color;
-  background-color: $input-base-color;
-}
-
-.NumberInput__input {
+.Input__input {
   display: block;
   position: absolute;
   top: 0;
@@ -55,7 +40,7 @@
   margin: 0;
   padding: 0 6px;
   font-family: Verdana, sans-serif;
-  background-color: #000;
+  background-color: transparent;
   color: #fff;
-  text-align: right;
+  color: inherit;
 }
