--- a/tgui-next/packages/tgui/components/Section.scss
+++ b/tgui-next/packages/tgui/components/Section.scss
@@ -1,10 +1,10 @@
 .Section {
   position: relative;
   margin-bottom: 6px;
-  background-color: darken($gray, 40%); // IE fallback
-  background-color: $display-color-background;
-  box-shadow: inset 0 0 5px $display-color-shadow;
+  background-color: $section-color-background;
+  box-shadow: inset 0 0 5px $section-color-shadow;
   box-sizing: border-box;
+  border-radius: $base-border-radius;
 
   &:last-child {
     margin-bottom: 0;
@@ -14,7 +14,7 @@
 .Section__title {
   position: relative;
   padding: 6px;
-  border-bottom: $rule-size solid $rule-color-normal;
+  border-bottom: 2px solid $section-color-separator;
 }
 
 .Section__titleText {
