--- a/nano/templates/donations.tmpl
+++ b/nano/templates/donations.tmpl
@@ -38,7 +38,7 @@
 		</tr>
 		{{for products}}
 			<tr>
-				<td align="center">{{:value.icon}}</td>
+				<td align="center"></td>
 				<td align="center">{{:helper.capitalizeFirstLetter(value.name)}}</td>
 				<td align="center">{{:helper.capitalizeFirstLetter(value.desc)}}</td>
 				<td>
