--- a/tgui-next/packages/tgui/components/ProgressBar.scss
+++ b/tgui-next/packages/tgui/components/ProgressBar.scss
@@ -4,7 +4,7 @@
   width: 100%;
   padding: 0 6px;
   border: 1px solid $progressbar-color-primary;
-  border-radius: $base-border-radius;
+  border-radius: $progressbar-border-radius;
   transition: border-color 500ms;
 }
 
