--- a/tgui-next/packages/tgui/components/Button.scss
+++ b/tgui-next/packages/tgui/components/Button.scss
@@ -32,7 +32,7 @@
   margin-right: 2px;
   white-space: nowrap;
   outline: 0;
-  border-radius: $base-border-radius;
+  border-radius: $button-border-radius;
   margin-bottom: 2px;
   // Disable selection in buttons
   user-select: none;
@@ -41,13 +41,20 @@
   &:last-child {
     margin-right: 0;
   }
+
+  .fa, .fas, .far {
+    margin-left: -2px;
+    margin-right: -2px;
+    min-width: 14px;
+    text-align: center;
+  }
 }
 
 .Button--hasContent {
   // Add a margin to the icon to keep it separate from the text
   .fa, .fas, .far {
     margin-left: -2px;
-    margin-right: 5px;
+    margin-right: 4px;
     min-width: 14px;
     text-align: center;
   }
