--- a/tgui-next/packages/tgui/components/NumberInput.scss
+++ b/tgui-next/packages/tgui/components/NumberInput.scss
@@ -3,7 +3,7 @@
   display: inline-block;
   border: 1px solid $input-base-color;
   border: 1px solid rgba($input-base-color, 0.75);
-  border-radius: $base-border-radius;
+  border-radius: $input-border-radius;
   color: $input-base-color;
   background-color: #000;
   background-color: rgba(0, 0, 0, 0.75);
