Третья тема ониксчата - марины

--- a/code/modules/onyxchat/browserassets/css/browserOutput.css
+++ b/code/modules/onyxchat/browserassets/css/browserOutput.css
@@ -305,7 +305,7 @@ em						{font-style: normal;	font-weight: bold;}
 .airadio				{color: #ff00ff;}
 .entradio				{color: #339966;}
 
-.secradio				{color: #a30000;}
+.secradio				{color: #b41c1c;}
 .engradio				{color: #a66300;}
 .medradio				{color: #008160;}
 .sciradio				{color: #993399;}
