--- a/code/modules/onyxchat/browserassets/css/browserOutput_marines.css
+++ b/code/modules/onyxchat/browserassets/css/browserOutput_marines.css
@@ -17,9 +17,9 @@ body {
 	overflow-x: hidden;
 	overflow-y: scroll;
 	word-wrap: break-word;
-	scrollbar-face-color:#1A1A1A;
-	scrollbar-track-color:#2c2f33;
-	scrollbar-highlight-color:#2c2f33;
+	scrollbar-face-color:#626f5b;
+	scrollbar-track-color:#2e332b;
+	scrollbar-highlight-color:#2e332b;
 }
 
 em {
@@ -220,6 +220,11 @@ a.popt {text-decoration: none;}
 *
 ******************************************/
 
+/* MOTD */
+.motd {color: #99aab5;font-family: Verdana, sans-serif;}
+.motd h1, .motd h2, .motd h3, .motd h4, .motd h5, .motd h6 {color: #99aab5;	text-decoration: underline;}
+.motd a, .motd a:link, .motd a:visited, .motd a:active, .motd a:hover {color: #99aab5;}
+
 /* ADD HERE FOR BOLD */
 .bold, .name, .prefix, .ooc, .looc, .adminooc, .admin, .medal, .yell {font-weight: bold;}
 
@@ -229,155 +234,120 @@ a.popt {text-decoration: none;}
 /* OUTPUT COLORS */
 .highlight {background: yellow;}
 
-.motd					{color: #99aab5;	font-family: Verdana, sans-serif;}
-.motd h1, .motd h2, .motd h3, .motd h4, .motd h5, .motd h6
-	{color: #99aab5;	text-decoration: underline;}
-.motd a, .motd a:link, .motd a:visited, .motd a:active, .motd a:hover
-	{color: #99aab5;}
-.tip					{color: #a000c4;	font-weight: bold;}
+h1, h2, h3, h4, h5, h6	{color: #a4bad6;font-family: Georgia, Verdana, sans-serif;}
+em						{font-style: normal;	font-weight: bold;}
 
-.prefix					{					font-weight: bold;}
+/* LOG */
+.log_message			{color: #386aff;	font-weight: bold;}
 
-.ooc					{					font-weight: bold;}
-.colorooc				{color: #3257c6;	font-weight: bold;}
-.looc					{color: #84add6;	font-weight: bold;}
-.hostooc				{color: #323232;	font-weight: bold;}
-.projleadooc			{color: #993299;	font-weight: bold;}
-.headcoderooc			{color: #323283;	font-weight: bold;}
-.headminooc				{color: #833232;	font-weight: bold;}
-.headmentorooc			{color: #326632;	font-weight: bold;}
-.adminooc				{color: #c3324a;	font-weight: bold;}
-.trialminooc			{color: #f35a32;	font-weight: bold;}
-.candiminooc			{color: #ff7a4a;	font-weight: bold;}
-.mentorooc				{color: #329932;	font-weight: bold;}
-.maintainerooc			{color: #4a6fde;	font-weight: bold;}
-.contributorooc			{color: #3283ff;	font-weight: bold;}
-.otherooc				{color: #835a32;	font-weight: bold;}
+/* OOC */
+.ooc					{font-weight: bold;}
+.ooc img.text_tag		{width: 32px; height: 10px;}
 
+.ooc .everyone			{color: #002eb8;}
+.ooc .looc				{color: #3a9696;}
+.ooc .elevated			{color: #2e78d9;}
+.ooc .moderator			{color: #184880;}
+.ooc .developer			{color: #1b521f;}
+.ooc .admin				{color: #b82e00;}
+.ooc .aooc				{color: #960018;}
 
-.msay					{color: #927c66;	font-weight: bold;}
-.adminmsay				{color: #84664a;	font-weight: bold;}
-.headminmsay			{color: #665442;	font-weight: bold;}
+/* Admin: Private Messages */
+.pm  .howto				{color: #ff0000;	font-weight: bold;		font-size: 200%;}
+.pm  .in				{color: #ff0000;}
+.pm  .out				{color: #ff0000;}
+.pm  .other				{color: #0000ff;}
 
-.admin					{color: #ff0000;	font-weight: bold;}
-.asay					{color: #ab40dc;	font-weight: bold;}
-.headminasay			{color: #7a3a98;	font-weight: bold;}
-.boldannounce			{color: #c51e1e;	font-weight: bold;}
-
-.staffpmin				{color: #f0134d;	font-weight: bold;}
-.staffpmout				{color: #3e64ff;	font-weight: bold;}
-
-.adminnotice			{color: #3d5bc3;}
-.adminhelp              {color: #c51e1e;    font-weight: bold;}
-
-.name					{					font-weight: bold;}
-
-.say					{color: #a4bad6;}
+/* Admin: Channels */
+.mod_channel			{color: #735638;	font-weight: bold;}
+.mod_channel .admin		{color: #b82e00;	font-weight: bold;}
+.admin_channel			{color: #9611d4;	font-weight: bold;}
 
 /* Radio: Misc */
-.deadsay				{color: #646695;}
-.radio					{color: #CE9178;}
-.deptradio				{color: #993399;}
-.newscaster				{color: #800000;}
+.deadsay				{color: #e2c1ff}
+.radio					{color: #1ecc43;}
+.deptradio				{color: #ff00ff;}	/* when all other department colors fail */
+.newscaster				{color: #750000;}
 
 /* Radio Channels */
-.comradio				{color: #2557b8;}
-.syndradio				{color: #6D3F40;}
-.centradio				{color: #2b677e;}
-.airadio				{color: #811981;}
+.comradio				{color: #2954ac;}
+.syndradio				{color: #6d3f40;}
+.centradio				{color: #5c5c8a;}
+.airadio				{color: #ff00ff;}
 .entradio				{color: #339966;}
 
-.secradio				{color: #A30000;}
-.engradio				{color: #c75f35;}
-.medradio				{color: #2D9955;}
-.sciradio				{color: #a343f5;}
-.supradio				{color: #8b6532;}
+.secradio				{color: #b41c1c;}
+.engradio				{color: #a66300;}
+.medradio				{color: #008160;}
+.sciradio				{color: #993399;}
+.supradio				{color: #5f4519;}
 .srvradio				{color: #6eaa2c;}
 .expradio				{color: #a3a332;}
 
-.binarysay    			{color: #20c20e; background-color: #000000; display: block;}
-.binarysay a  			{color: #00ff00;}
-.binarysay a:active, .binarysay a:visited {color: #88ff88;}
+/* Miscellaneous */
+.name					{font-weight: bold;}
+.alert					{color: #d82020;}
+h1.alert, h2.alert		{color: #a4bad6;}
 
-.alert					{color: #c51e1e;}
-h1.alert, h2.alert		{color: #99aab5;}
+.emote					{font-style: italic;}
 
-.emote					{					font-style: italic;}
-.selecteddna			{color: #FFFFFF; 	background-color: #001B1B}
-
+/* Game Messages */
 .attack					{color: #ff0000;}
-.moderate				{color: #CC0000;}
-.disarm					{color: #780202;}
-.passive				{color: #510000;}
+.moderate				{color: #cc0000;}
+.disarm					{color: #990000;}
+.passive				{color: #660000;}
 
-.scanner			{color: #ff0000;}
-.scannerb			{color: #ff0000;	font-weight: bold;}
-.scannerburn	{color: #ffa500;}
-.scannerburnb	{color: #ffa500;	font-weight: bold;}
+.danger					{color: #c51e1e;}
+.warning				{color: #c51e1e;	font-style: italic;}
+.boldannounce			{color: #c51e1e;	font-weight: bold;}
 .rose					{color: #ff5050;}
-.info					{color: #3d5bc3;}
-.debuginfo				{color: #493D26;	font-style: italic;}
-.notice					{color: #3d5bc3;}
-.boldnotice				{color: #3d5bc3;	font-weight: bold;}
-.warning				{color: #ce9178;	font-style: italic;}
-.danger					{color: #d16969;	font-weight: bold;}
-.hivemind				{color: #c586c0;}
+.info					{color: #6685f5;}
+.notice					{color: #6685f5;}
+.alium					{color: #00ff00;}
+.cult					{color: #aa1c1c;}
 
-.alien					{color: #543354;}
-
-.role_header			{color: #db0000;	display: block; text-align: center; font-weight: bold; font-family: trebuchet-ms; font-size: 1.5em;}
-.role_body				{color: #5a5abd;	display: block; text-align: center;}
-
-.round_setup			{color: #db0000;		font-family: impact; font-size: 1.25em;}
-.round_header			{color: #db0000; 	display: block; text-align: center; font-family: courier; font-weight: bold; font-size: 2em;}
-.round_body				{color: #6685f5; 	display: block; text-align: center; font-family: trebuchet-ms; font-weight: bold; font-size: 1.5em;}
-.event_announcement		{color: #600d48; 	font-family: arial-narrow; font-weight: bold; font-size: 1.5em;}
-
-.centerbold				{				 	text-align: center; font-weight: bold;}
-
-.tajaran				{color: #803B56;}
-.tajaran_signlang		{color: #941C1C;}
-.skrell					{color: #00CED1;}
-.soghun					{color: #228B22;}
-.changeling				{color: #800080;}
-.vox					{color: #AA00AA;}
-.rough					{font-family: trebuchet-ms, cursive, sans-serif;}
+/* Languages */
+.alien					{color: #855d85;}
+.changeling				{color: #059223;	font-style: italic;}
+.tajaran				{color: #803b56;}
+.tajaran_signlang		{color: #941c1c;}
+.skrell					{color: #00ced1;}
+.soghun					{color: #228b22;}
+.nabber_lang			{color: #525252;}
+.solcom					{color: #22228b;}
+.vox					{color: #aa00aa;}
+.rough					{font-family: "Trebuchet MS", cursive, sans-serif;}
 .say_quote				{font-family: Georgia, Verdana, sans-serif;}
-.command_headset		{font-weight: bold; font-size: 18px;}
-.robot					{font-family: "Courier New", cursive, sans-serif;}
-
-
-.green					{color: #059223;}
-.nicegreen				{color: #059223;}
-.shadowling				{color: #3b2769;}
-.cult					{color: #740202;}
-.cultlarge				{color: #740202; font-weight: bold; font-size: 3;}
-.narsie					{color: #740202; font-weight: bold; font-size: 15;}
-.narsiesmall			{color: #740202; font-weight: bold; font-size: 6;}
-.colossus				{color: #7F282A; font-size: 5;}
-.hierophant				{color: #660099; font-weight: bold; font-style: italic;}
-.hierophant_warning		{color: #660099; font-style: italic;}
-.purple					{color: #7c00e6;}
-.holoparasite			{color: #35333a;}
-
-.revennotice			{color: #1d2953;}
-.revenboldnotice		{color: #1d2953;	font-weight: bold;}
-.revenbignotice			{color: #1d2953;	font-weight: bold; font-size: 3;}
-.revenminor				{color: #823abb}
-.revenwarning			{color: #760fbb;	font-style: italic;}
-.revendanger			{color: #760fbb;	font-weight: bold; font-size: 3;}
-.umbra					{color: #7c00e6;}
-.umbra_emphasis			{color: #7c00e6;	font-weight: bold;	font-style: italic;}
-.umbra_large			{color: #7c00e6; font-size: 3; font-weight: bold; font-style: italic;}
-
-.deconversion_message	{color: #7c00e6; font-size: 3; font-style: italic;}
+.terran					{color: #9c250b;}
+.moon					{color: #422863;}
+.spacer					{color: #ff6600;}
 
 .interface				{color: #750e75;}
 
-.connectionClosed, .fatalError {background: red; color: white; padding: 5px;}
+.good                   {color: #4f7529; font-weight: bold;}
+.bad                    {color: #ee0000; font-weight: bold;}
+
+@keyframes hypnocolor {
+	0%		{color: #202020;}
+	25%		{color: #4b02ac;}
+	50%		{color: #9f41f1;}
+	75%		{color: #541c9c;}
+	100%	{color: #7adbf3;}
+}
+
+.phobia			{color: #dd0000;	font-weight: bold;	animation: phobia 750ms infinite;}
+@keyframes phobia {
+	0%		{color: #f75a5a;}
+	50%		{color: #dd0000;}
+	100%	{color: #f75a5a;}
+}
+
+.icon 					{height: 1em;	width: auto;}
+
+.connectionClosed, .fatalError {background: red;	color: white;	padding: 5px;}
 .connectionClosed.restored {background: green;}
-.internal.boldnshit {color:#3d5bc3; font-weight: bold;}
+.internal.boldnshit {color: #3d5bc3;	font-weight: bold;}
 
 /* HELPER CLASSES */
-.text-normal {font-weight: normal; font-style: normal;}
-.hidden {display: none; visibility: hidden;}
+.text-normal {font-weight: normal;	font-style: normal;}
+.hidden {display: none;	visibility: hidden;}
