--- a/code/modules/onyxchat/browserassets/css/browserOutput_white.css
+++ b/code/modules/onyxchat/browserassets/css/browserOutput_white.css
@@ -257,14 +257,15 @@ a.popt {text-decoration: none;}
 
 h1, h2, h3, h4, h5, h6	{color: #0000ff;font-family: Georgia, Verdana, sans-serif;}
 
-em						{font-style: normal;	font-weight: bold;}
+em						{font-style: normal;font-weight: bold;}
 
 /* LOG */
-.log_message			{color: #386aff;	font-weight: bold;}
+.log_message			{color: #386aff;font-weight: bold;}
 
 /* OOC */
 .ooc					{font-weight: bold;}
 .ooc img.text_tag		{width: 32px; height: 10px;}
+
 .ooc .everyone			{color: #002eb8;}
 .ooc .looc				{color: #3a9696;}
 .ooc .elevated			{color: #2e78d9;}
@@ -274,23 +275,15 @@ em						{font-style: normal;	font-weight: bold;}
 .ooc .aooc				{color: #960018;}
 
 /* Admin: Private Messages */
-.pm  .howto				{color: #ff0000;	font-weight: bold;		font-size: 200%;}
+.pm  .howto				{color: #ff0000;font-weight: bold;font-size: 200%;}
 .pm  .in				{color: #ff0000;}
 .pm  .out				{color: #ff0000;}
 .pm  .other				{color: #0000ff;}
 
 /* Admin: Channels */
-.mod_channel			{color: #735638;	font-weight: bold;}
-.mod_channel .admin		{color: #b82e00;	font-weight: bold;}
-.admin_channel			{color: #9611d4;	font-weight: bold;}
-
-.name					{					font-weight: bold;}
-
-/* Miscellaneous */
-.name					{font-weight: bold;}
-.say					{}
-.alert					{color: #ff0000;}
-h1.alert, h2.alert		{color: #000080;}
+.mod_channel			{color: #735638;font-weight: bold;}
+.mod_channel .admin		{color: #b82e00;font-weight: bold;}
+.admin_channel			{color: #9611d4;font-weight: bold;}
 
 /* Radio: Misc */
 .deadsay				{color: #530fad;}
@@ -313,81 +306,49 @@ h1.alert, h2.alert		{color: #000080;}
 .srvradio				{color: #6eaa2c;}
 .expradio				{color: #a3a332;}
 
-.yell					{					font-weight: bold;}
+/* Miscellaneous */
+.name					{font-weight: bold;}
+.alert					{color: #ff0000;}
+h1.alert, h2.alert		{color: #000080;}
 
-.emote					{					font-style: italic;}
+.emote					{font-style: italic;}
 
-.userdanger				{color: #ff0000;	font-weight: bold;	font-size: 185%;}
+/* Game Messages */
+.attack					{color: #ff0000;}
+.moderate				{color: #cc0000;}
+.disarm					{color: #990000;}
+.passive				{color: #660000;}
+
 .danger					{color: #ff0000;}
 .warning				{color: #ff0000;	font-style: italic;}
-.alertwarning			{color: #FF0000;	font-weight: bold}
-.boldwarning			{color: #ff0000;	font-style: italic;	font-weight: bold}
-.announce				{color: #228b22;	font-weight: bold;}
 .boldannounce			{color: #ff0000;	font-weight: bold;}
-.greenannounce			{color: #00ff00;	font-weight: bold;}
 .rose					{color: #ff5050;}
 .info					{color: #0000CC;}
 .notice					{color: #000099;}
-.boldnotice				{color: #000099;	font-weight: bold;}
-.hear					{color: #000099;	font-style: italic;}
-.adminnotice			{color: #0000ff;}
-.adminhelp				{color: #ff0000;	font-weight: bold;}
-.unconscious			{color: #0000ff;	font-weight: bold;}
-.suicide				{color: #ff5050;	font-style: italic;}
-.green					{color: #03ff39;}
-.red					{color: #FF0000}
-.blue					{color: #0000FF}
-.nicegreen				{color: #14a833;}
+.alium					{color: #00ff00;}
+.cult					{color: #800080; font-weight: bold; font-style: italic;}
 
-.cult					{color: #960000;}
-.cultitalic				{color: #960000;	font-style: italic;}
-.cultbold				{color: #960000;	font-style: italic;	font-weight: bold;}
-.cultboldtalic			{color: #960000;	font-weight: bold;	font-size: 185%;}
+/* Languages */
+.alien					{color: #855d85;}
+.changeling				{color: #059223;	font-style: italic;}
+.tajaran				{color: #803b56;}
+.tajaran_signlang		{color: #941c1c;}
+.skrell					{color: #00ced1;}
+.soghun					{color: #228b22;}
+.nabber_lang			{color: #525252;}
+.solcom					{color: #22228b;}
+.vox					{color: #aa00aa;}
+.rough					{font-family: "Trebuchet MS", cursive, sans-serif;}
+.say_quote				{font-family: Georgia, Verdana, sans-serif;}
+.terran					{color: #9c250b;}
+.moon					{color: #422863;}
+.spacer					{color: #ff6600;}
 
-.cultlarge				{color: #960000;	font-weight: bold;	font-size: 185%;}
-.narsie					{color: #960000;	font-weight: bold;	font-size: 925%;}
-.narsiesmall			{color: #960000;	font-weight: bold;	font-size: 370%;}
-.colossus				{color: #7F282A;	font-size: 310%;}
-.hierophant				{color: #660099;	font-weight: bold;	font-style: italic;}
-.hierophant_warning		{color: #660099;	font-style: italic;}
-.purple					{color: #5e2d79;}
-.holoparasite			{color: #35333a;}
+.interface				{color: #750e75;}
 
-.revennotice			{color: #1d2953;}
-.revenboldnotice		{color: #1d2953;	font-weight: bold;}
-.revenbignotice			{color: #1d2953;	font-weight: bold;	font-size: 185%;}
-.revenminor				{color: #823abb}
-.revenwarning			{color: #760fbb;	font-style: italic;}
-.revendanger			{color: #760fbb;	font-weight: bold;	font-size: 185%;}
+.good                   {color: #4f7529; font-weight: bold;}
+.bad                    {color: #ee0000; font-weight: bold;}
 
-.deconversion_message	{color: #5000A0;	font-size: 185%;	font-style: italic;}
-
-.ghostalert				{color: #5c00e6;	font-style: italic;	font-weight: bold;}
-
-.alien					{color: #543354;}
-.noticealien			{color: #00c000;}
-.alertalien				{color: #00c000;	font-weight: bold;}
-.changeling				{color: #800080;	font-style: italic;}
-.alertsyndie			{color: #FF0000;	font-size: 185%;	font-weight: bold;}
-
-.spider					{color: #4d004d;	font-weight: bold;	font-size: 185%;}
-
-.interface				{color: #330033;}
-
-.sans					{font-family: "Comic Sans MS", cursive, sans-serif;}
-.papyrus				{font-family: "Papyrus", cursive, sans-serif;}
-.robot					{font-family: "Courier New", cursive, sans-serif;}
-
-.command_headset		{font-weight: bold;	font-size: 160%;}
-.small					{font-size: 60%;}
-.big					{font-size: 185%;}
-.reallybig				{font-size: 245%;}
-.extremelybig			{font-size: 310%;}
-.greentext				{color: #00FF00;	font-size: 185%;}
-.redtext				{color: #FF0000;	font-size: 185%;}
-.clown					{color: #FF69Bf;	font-size: 160%; font-family: "Comic Sans MS", cursive, sans-serif;	font-weight: bold;}
-.his_grace				{color: #15D512;	font-family: "Courier New", cursive, sans-serif;	font-style: italic;}
-.hypnophrase			{color: #0d0d0d;	font-weight: bold;	animation: hypnocolor 1500ms infinite;}
 @keyframes hypnocolor {
 	0%		{color: #0d0d0d;}
 	25%		{color: #410194;}
@@ -404,19 +365,6 @@ h1.alert, h2.alert		{color: #000080;}
 }
 
 .icon					{height: 1em;	width: auto;}
-
-.memo					{color: #638500;	text-align: center;}
-.memoedit				{text-align: center;	font-size: 125%;}
-.abductor				{color: #800080;	font-style: italic;}
-.mind_control			{color: #A00D6F;	font-size: 100%;	font-weight: bold;	font-style: italic;}
-.slime					{color: #00CED1;}
-.drone					{color: #848482;}
-.monkey					{color: #975032;}
-.swarmer				{color: #2C75FF;}
-.resonate				{color: #298F85;}
-
-.monkeyhive				{color: #774704;}
-.monkeylead				{color: #774704;	font-size: 80%;}
 
 .connectionClosed, .fatalError {background: red;	color: white;	padding: 5px;}
 .connectionClosed.restored {background: green;}
