--- a/html/templates/footer.html
+++ b/html/templates/footer.html
@@ -1,4 +1,10 @@
-    </div>
-</td></tr></table>
-</body>
-</html>
+</ul>
+
+<h3>OnyxBay Команда</h3>
+
+<p class="team">
+    <strong>Хостер:</strong> ZloFenix<br>
+    <strong>Кодеры:</strong> Banditoz, BombanyTI, DeadPhilosof, EditorRUS, Epicus, Fritcher, Ifromspace, Igorsaux, jammer312, kreeperHLC, MalinaBoy, MrPersival, Plin, Rebruiza, Rodial-Admiral, sabiram, Sinful, TestUnit, thefrostycoder, TobyThorne, Vmihey, ZerlGray, <br>
+    <strong>Маперы:</strong> Rampo, TatarTheBuilder <br>
+    <strong>Спрайтеры:</strong> Leonido33, Tem<br>
+</p>
