Наделал заказов для шахтерки и реализовал скупку с пола шаттла

--- a/nano/templates/supply.tmpl
+++ b/nano/templates/supply.tmpl
@@ -132,8 +132,8 @@
 					<tr>
 					<td>{{:value.order_name}}
 					<td>{{:value.order_desc}}
-					<span><td>{{:value.order_progress}}/{{:value.order_max_progress}}</span>
-					<span><td>{{:value.order_cost}} Cr.</span>
+					<td align="center">{{:value.order_progress}}/{{:value.order_max_progress}}
+					<td align="center">{{:value.order_cost}} Cr.
 				{{/for}}
 		</table>
 	</div>
